# loop-protocol

./: .gitignore  AUDIT-2026-03-12.md  Anchor.toml  Cargo.toml  README.md  ROADMAP.md  STATUS.md  demo.sh  package.json  tsconfig.json
browser-extension/: manifest.json  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
browser-extension/src/: background.ts  content.ts  popup.html  popup.ts
docs/: ARCHITECTURE.md  BUILD-REQUIREMENTS.md  CAPTURE-LAYERS.md  DECISIONS.md  GLOSSARY.md  SECURITY-ARCHITECTURE.md  TOKENOMICS.md  WHITEPAPER.md
docs-gitbook/: README.md  SUMMARY.md  book.json  package.json
docs-gitbook/.vercel/: project.json
docs-gitbook/_book/: .env.local  index.html  package-lock.json  search_index.json
docs-gitbook/agents/: interop.md  personal.md  service.md
docs-gitbook/architecture/: avp.md  capture-modules.md  principles.md  stack.md  vtp.md
docs-gitbook/comparisons/: crypto.md  tradfi.md  virtuals.md
docs-gitbook/governance/: decentralization.md  protocol.md  security.md
docs-gitbook/introduction/: abstract.md
docs-gitbook/opportunity/: agentic-era.md  infrastructure.md  realignment.md
docs-gitbook/problem/: extraction.md  generational.md  scale.md
docs-gitbook/reference/: glossary.md  programs.md  sdk.md
docs-gitbook/roadmap/: phases.md
docs-gitbook/tokenomics/: cred.md  dual-token.md  flows.md  oxo.md  staking.md
docs-gitbook/vision/: capture.md  compounding.md  inheritance.md  overview.md
eliza/: loop-swarm.ts  merchant-agent.ts  tsconfig.json
programs/loop-avp/: Cargo.toml
programs/loop-cred/: Cargo.toml
programs/loop-cred/src/: lib.rs
programs/loop-oxo/: Cargo.toml
programs/loop-oxo/src/: lib.rs
programs/loop-shopping/: Cargo.toml
programs/loop-vault/: Cargo.toml
programs/loop-vault/src/: lib.rs
programs/loop-vtp/: Cargo.toml
programs/loop-vtp/src/: lib.rs
sdk/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdk/examples/: 01-basic-vault.ts  02-agent-permissions.ts  03-escrow.ts  04-oxo-staking.ts  basic-vault.ts  capture-rewards.ts  stacking.ts
sdk/src/: constants.ts  devnet.ts  errors.ts  index.ts  loop.ts  network.ts  pda.ts  simple.ts
sessions/: 2026-03-10.md
specs/: avp.md  cred.md  oxo.md  vault.md  ve-oxo.md  vtp.md
tests/: agent-savings.ts  integration.ts  loop-avp.ts  loop-cred.ts  loop-oxo.ts  loop-vault.ts  loop-vtp.ts
(+84 files in other folders)
