[package]
name = "loop-cred"
version = "0.1.0"
description = "Loop Protocol Cred Token - Stable value token (wrapped USDC)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loop_cred"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
