[package]
name = "loop-vault"
version = "0.1.0"
description = "Loop Vault - User-owned value storage with stacking capabilities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loop_vault"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
