[package]
name = "loop-vtp"
version = "0.1.0"
description = "Loop VTP - Value Transfer Protocol with escrow and inheritance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loop_vtp"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
